@@ -1,0 +1,6 @@
+probe begin
+{
+	printf("Hello");
+	printf("World");
+	printf("\n");
+}
