@@ -1,3 +1,12 @@
+2008-01-24  Frank Ch. Eigler  <fche@elastic.org>
+
+	crash(8) tests, based on Masami Hiramatsu <mhiramat@redhat.com>:
+	* Makefile.am (CRASH_LIBDIR): Pass in $(RUNTEST).
+	* lib/systemtap.exp (as_root): Trace command string, output, and
+	result.
+	* sysetmtap.samples/crash.*, testlog.stp: New test case.
+	* Makefile.in: Regenerated.
+
 2008-01-23  Frank Ch. Eigler  <fche@elastic.org>
 
 	PR 2521.
