@@ -1,3 +1,8 @@
+2008-01-24  Frank Ch. Eigler  <fche@elastic.org>
+
+	* Makefile.am: Make another $(MKDIR) call visible.
+	* Makefile.in: Regenerated.
+
 2008-01-24  David Smith  <dsmith@redhat.com>
 
 	PR 5661 (reverted).
